# pokedb

./: .env.example  .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: regenerate-data.yaml  update-data.yaml
gen1/: index.json
gen1/move/: absorb.json  acid-armor.json  acid.json  agility.json  amnesia.json  aurora-beam.json  barrage.json  barrier.json  bide.json  bind.json  bite.json  blizzard.json  body-slam.json  bone-club.json  bonemerang.json  bubble-beam.json  bubble.json  clamp.json  comet-punch.json  confuse-ray.json  confusion.json  constrict.json  conversion.json  counter.json  crabhammer.json  cut.json  defense-curl.json  dig.json  disable.json  dizzy-punch.json  double-edge.json  double-kick.json  double-slap.json  double-team.json  dragon-rage.json  dream-eater.json  drill-peck.json  earthquake.json  egg-bomb.json  ember.json  (+125 more)
gen2/: index.json
gen2/move/: absorb.json  acid-armor.json  acid.json  aeroblast.json  agility.json  amnesia.json  ancient-power.json  attract.json  aurora-beam.json  barrage.json  barrier.json  baton-pass.json  beat-up.json  belly-drum.json  bide.json  bind.json  bite.json  blizzard.json  body-slam.json  bone-club.json  bone-rush.json  bonemerang.json  (+229 more)
gen3/: index.json
gen4/: index.json
gen5/: index.json
gen6/: index.json
gen7/: index.json
gen8/: index.json
gen9/: index.json
src/: ability_parser.py  egg_group_parser.py  evolution_parser.py  gender_parser.py  growth_rate_parser.py  item_parser.py  move_parser.py  pokemon_parser.py  species_parser.py  template.py
(+26100 files in other folders)
