[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokedb"
version = "1.0.0"
description = "A comprehensive and generation-accurate Pokémon database parser"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "zhenga8533", email = "zhenga8533@users.noreply.github.com"}
]
keywords = ["pokemon", "pokeapi", "database", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests",
    "tqdm",
    "beautifulsoup4",
    "lxml",
]

[project.urls]
Homepage = "https://github.com/zhenga8533/pokedb"
Documentation = "https://github.com/zhenga8533/pokedb/wiki"
Repository = "https://github.com/zhenga8533/pokedb"
Issues = "https://github.com/zhenga8533/pokedb/issues"

[project.scripts]
pokedb = "pokedb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
